--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La cocina de Sergio</title>
+    <title>La cocina de Carla</title>
     <link href="./css/style.css" rel="stylesheet">
     <link rel="icon" href=".\imgs\logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
