--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
 <div class="intro">
 <p class="noindent">Nos encanta la fotografía y amamos viajar.<br/> Viajá con nosotros y conocé todas las experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el viaje.</p></div>
     
-<div class="container">
+<div class="container-index">
 
     <div class="item item-1">
-        <div class="image-interior"><img src="imgs/pizza napolitana.jpg"></div>
+        <div class="image-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
         <h2>Tolar grande</h2>
         <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños pueblos puneños llenos de maravillas naturales para descubrir en cada kilometro. Una aventura fotográfica por paisajes impactantes, ricos en imágenes y contrastes. Vicuñas, zorros y aves exoticas seran nuestros objetivos a fotografiar. La Puna esta cubierta de Salares y monumentos tallados en roca volcánica en el Corazón de la Puna Argentina.
 Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados, Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
 </p>
     <p class="right">Conocé más +</p></div>
     <div class="item item-2">
-        <div class="image-interior"><img src="imgs/pizza napolitana.jpg"></div>
+        <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg"></div>
         <h2>Serranía de Hornocal</h2><p>La serranía de Hornocal es una sierra ubicada a 25 kilómetros de la ciudad de Humahuaca en la provincia de Jujuy en la Argentina. Está formada mayormente por rocas de la Formación Yacoraite, una unidad geológica calcárea de antigüedad Cretácico Superior, que se extiende desde la provincia de Salta, atravesando la Quebrada de Humahuaca y luego el altiplano boliviano hasta Perú.1​ Este accidente geográfico tiene una altura de 4761 metros sobre el nivel del mar.
 
 Su forma característica es resultado de un efecto de corte, que consiste en la erosión en ángulo de un conjunto de capas paralelas que produce un efecto visual similar al de plegamientos (erróneamente asociado a esta serranía con frecuencia).2​</p>
     <p class="right">Conocé más +</p></div>
     <div class="item item-3">
-        <div class="image-interior"><img src="imgs/pizza napolitana.jpg"></div><h2>Cachi</h2><p>El municipio de Cachi está ubicado al oeste de la provincia de Salta, en la región de los Valles Calchaquíes, y pertenece al departamento de Cachi. Limita al norte con el municipio de Payogasta y al sur con el municipio de Seclantás. El Pueblo de Cachi está situado a 2.280 msnm y se arriba por la Ruta Nacional 40. Está ubicado a 150.6 km de la Ciudad de Salta. El Municipio está conformado por los parajes de Quipón, El Angosto, Rancagua, Escalchi, La Paya, San José, El Barrial, El Colte, Fuerte Alto Banda Norte y Banda Sur, Cachi Adentro, San Miguel, Las Arcas, Las Pailas, La Aguada, Las Trancas y El Algarrobal.</p>
+        <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg"></div><h2>Cachi</h2><p>El municipio de Cachi está ubicado al oeste de la provincia de Salta, en la región de los Valles Calchaquíes, y pertenece al departamento de Cachi. Limita al norte con el municipio de Payogasta y al sur con el municipio de Seclantás. El Pueblo de Cachi está situado a 2.280 msnm y se arriba por la Ruta Nacional 40. Está ubicado a 150.6 km de la Ciudad de Salta. El Municipio está conformado por los parajes de Quipón, El Angosto, Rancagua, Escalchi, La Paya, San José, El Barrial, El Colte, Fuerte Alto Banda Norte y Banda Sur, Cachi Adentro, San Miguel, Las Arcas, Las Pailas, La Aguada, Las Trancas y El Algarrobal.</p>
         <p class="right">Conocé más +</p></div>
     <div class="item item-4">
-        <div class="image-interior"><img src="imgs/pizza napolitana.jpg"></div><h2>Cafayate</h2><p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta, región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad de los vinos que allí se producen.</p>
+        <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div><h2>Cafayate</h2><p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta, región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad de los vinos que allí se producen.</p>
         <p class="right">Conocé más +</p></div>
 
 
