--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <p class="noindent">Nos encanta la fotografía y amamos viajar.<br/> Viajá con nosotros y conocé todas las experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el viaje.</p></div>
     
 <div class="container-index">
-
+    <h3 class="tituloSectionViajes">NUESTROS VIAJES FOTOGRAFICOS</h3>
     <div class="item item-1">
-        <div class="image-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
+        <div class="imaxge-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
         <h2>Tolar grande</h2>
         <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños pueblos puneños llenos de maravillas naturales para descubrir en cada kilometro. Una aventura fotográfica por paisajes impactantes, ricos en imágenes y contrastes. Vicuñas, zorros y aves exoticas seran nuestros objetivos a fotografiar. La Puna esta cubierta de Salares y monumentos tallados en roca volcánica en el Corazón de la Puna Argentina.
 Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados, Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
@@ -50,7 +50,6 @@ Su forma característica es resultado de un efecto de corte, que consiste en la 
 
   
 </div>
-
 
 <div class="formulario">
     
