--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="icon" href=".\imgs\logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header class="navbar-area">
         <div class="navbar">
@@ -37,77 +39,121 @@
         </div>
     </div>
 
-    <div class="cabezal cambiarColor"><p class="center">Salta fotográfico</p></div>
-<div class="intro">
-<p class="noindent">Nos encanta la fotografía y amamos viajar.<br/> Viajá con nosotros y conocé todas las experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el viaje.</p></div>
-    
-<div class="container-index">
-    <h3 class="tituloSectionViajes">NUESTROS VIAJES FOTOGRAFICOS</h3>
-    <div class="item item-1">
-        <div class="imaxge-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
-        <h2>Tolar grande</h2>
-        <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños pueblos puneños llenos de maravillas naturales para descubrir en cada kilometro. Una aventura fotográfica por paisajes impactantes, ricos en imágenes y contrastes. Vicuñas, zorros y aves exoticas seran nuestros objetivos a fotografiar. La Puna esta cubierta de Salares y monumentos tallados en roca volcánica en el Corazón de la Puna Argentina.
-Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados, Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
-</p>
-    <p class="right">Conocé más +</p></div>
-    <div class="item item-2">
-        <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg"></div>
-        <h2>Serranía de Hornocal</h2><p>La serranía de Hornocal es una sierra ubicada a 25 kilómetros de la ciudad de Humahuaca en la provincia de Jujuy en la Argentina. Está formada mayormente por rocas de la Formación Yacoraite, una unidad geológica calcárea de antigüedad Cretácico Superior, que se extiende desde la provincia de Salta, atravesando la Quebrada de Humahuaca y luego el altiplano boliviano hasta Perú.1​ Este accidente geográfico tiene una altura de 4761 metros sobre el nivel del mar.
+    <div class="cabezal cambiarColor">
+        <p class="center">Salta fotográfico</p>
+    </div>
+    <div class="intro">
+        <p class="noindent">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y conocé todas las
+            experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el viaje.</p>
+    </div>
 
-Su forma característica es resultado de un efecto de corte, que consiste en la erosión en ángulo de un conjunto de capas paralelas que produce un efecto visual similar al de plegamientos (erróneamente asociado a esta serranía con frecuencia).2​</p>
-    <p class="right">Conocé más +</p></div>
-    <div class="item item-3">
-        <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg"></div><h2>Cachi</h2><p>El municipio de Cachi está ubicado al oeste de la provincia de Salta, en la región de los Valles Calchaquíes, y pertenece al departamento de Cachi. Limita al norte con el municipio de Payogasta y al sur con el municipio de Seclantás. El Pueblo de Cachi está situado a 2.280 msnm y se arriba por la Ruta Nacional 40. Está ubicado a 150.6 km de la Ciudad de Salta. El Municipio está conformado por los parajes de Quipón, El Angosto, Rancagua, Escalchi, La Paya, San José, El Barrial, El Colte, Fuerte Alto Banda Norte y Banda Sur, Cachi Adentro, San Miguel, Las Arcas, Las Pailas, La Aguada, Las Trancas y El Algarrobal.</p>
-        <p class="right">Conocé más +</p></div>
-    <div class="item item-4">
-        <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div><h2>Cafayate</h2><p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta, región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad de los vinos que allí se producen.</p>
-        <p class="right">Conocé más +</p></div>
+    <div class="container-index">
+        <h3 class="tituloSectionViajes">NUESTROS VIAJES FOTOGRAFICOS</h3>
+        <div class="item item-1">
+            <div class="imaxge-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
+            <h2>Tolar grande</h2>
+            <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños pueblos
+                puneños llenos de maravillas naturales para descubrir en cada kilometro. Una aventura fotográfica por
+                paisajes impactantes, ricos en imágenes y contrastes. Vicuñas, zorros y aves exoticas seran nuestros
+                objetivos a fotografiar. La Puna esta cubierta de Salares y monumentos tallados en roca volcánica en el
+                Corazón de la Puna Argentina.
+                Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados,
+                Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
+            </p>
+            <p class="right">Conocé más +</p>
+        </div>
+        <div class="item item-2">
+            <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg"></div>
+            <h2>Serranía de Hornocal</h2>
+            <p>La serranía de Hornocal es una sierra ubicada a 25 kilómetros de la ciudad de Humahuaca en la provincia
+                de Jujuy en la Argentina. Está formada mayormente por rocas de la Formación Yacoraite, una unidad
+                geológica calcárea de antigüedad Cretácico Superior, que se extiende desde la provincia de Salta,
+                atravesando la Quebrada de Humahuaca y luego el altiplano boliviano hasta Perú.1​ Este accidente
+                geográfico tiene una altura de 4761 metros sobre el nivel del mar.
 
-
-  
-</div>
-
-<div class="formulario">
-    
-    <p>Escribinos para conocer detalles y recibir información sobre las futuras salidas.
-        <p class="center"><b>Eliminar el estilo formulario que está abajo de todo en el css, es sólo para destacar esta sección</b></p>
-</div>
-
-
-<div class="info">
-    <h3>Que incluye el tour:</h3>
-<p>Guia/Fotógrafo, Transporte, Alojamiento en Refugio AFAPUNA (consultar por hotel boutique) de altura, chofer/guía en castellano o ingles (segun se solicite) en toda la excursión.</p>
-
-  <h3>Que no incluye:</h3>
-<p>
-Equipo de fotografía, Desayuno, Almuerzo, entradas a museos o similares, degustaciones pagas, propinas y extras no especificados.<p>
-<h3>Que recomendamos llevar:</h3>
-<p>
-Ropa Comoda, documentos, dinero, Anteojos de sol, protector solar, gorra o sombrero, ropa de abrigo, binoculares, cámara de fotos.</p>
-<h3>Politica de la empresa y cancelaciones</h3>
-<p><b>Transporte:</b> El tipo de vehículo asignado quedara pura y exclusivamente a criterio de La Empresa.</p>
-<p><b>Equipaje:</b> El equipaje y demás objetos corren por cuenta y riesgo de los pasajeros.</p>
-
-<p><b>Documentación:</b> La presentación de documentación para la realización del viaje contratado, queda a cargo de los pasajeros.</p>
-
-<p><b>Derecho de permanencia:</b> La Empresa se reserva el derecho de permanencia de pasajeros que por mala conducta, higiene, salud u otro motivo constituyan incomodidad para los demás integrantes del viaje.</p>
-
-
-<p><b>Cancelaciones:</b> Para las cancelaciones realizadas faltando 3 días para el inicio del viaje, se descontara el 30% de total, para cancelaciones realizadas faltando 2 días, se descontara el 50% del total y para cancelaciones dentro de las 24 horas, La Empresa no efectuara devolución alguna.</p>
-
-<p><b>Pagos:</b> La reserva quedara confirmada una vez hecho el pago del 50% del servicio contratado, debiendo el pasajero completar el saldo restante (50%) en el momento de iniciar el viaje.</p>
+                Su forma característica es resultado de un efecto de corte, que consiste en la erosión en ángulo de un
+                conjunto de capas paralelas que produce un efecto visual similar al de plegamientos (erróneamente
+                asociado a esta serranía con frecuencia).2​</p>
+            <p class="right">Conocé más +</p>
+        </div>
+        <div class="item item-3">
+            <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg"></div>
+            <h2>Cachi</h2>
+            <p>El municipio de Cachi está ubicado al oeste de la provincia de Salta, en la región de los Valles
+                Calchaquíes, y pertenece al departamento de Cachi. Limita al norte con el municipio de Payogasta y al
+                sur con el municipio de Seclantás. El Pueblo de Cachi está situado a 2.280 msnm y se arriba por la Ruta
+                Nacional 40. Está ubicado a 150.6 km de la Ciudad de Salta. El Municipio está conformado por los parajes
+                de Quipón, El Angosto, Rancagua, Escalchi, La Paya, San José, El Barrial, El Colte, Fuerte Alto Banda
+                Norte y Banda Sur, Cachi Adentro, San Miguel, Las Arcas, Las Pailas, La Aguada, Las Trancas y El
+                Algarrobal.</p>
+            <p class="right">Conocé más +</p>
+        </div>
+        <div class="item item-4">
+            <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div>
+            <h2>Cafayate</h2>
+            <p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta,
+                región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad de
+                los vinos que allí se producen.</p>
+            <p class="right">Conocé más +</p>
+        </div>
 
 
- </div>
+
+    </div>
+
+    <div class="formulario">
+
+        <p>Escribinos para conocer detalles y recibir información sobre las futuras salidas.
+        <p class="center"><b>Eliminar el estilo formulario que está abajo de todo en el css, es sólo para destacar esta
+                sección</b></p>
+    </div>
+
+
+    <div class="info">
+        <h3>Que incluye el tour:</h3>
+        <p>Guia/Fotógrafo, Transporte, Alojamiento en Refugio AFAPUNA (consultar por hotel boutique) de altura,
+            chofer/guía en castellano o ingles (segun se solicite) en toda la excursión.</p>
+
+        <h3>Que no incluye:</h3>
+        <p>
+            Equipo de fotografía, Desayuno, Almuerzo, entradas a museos o similares, degustaciones pagas, propinas y
+            extras no especificados.
+        <p>
+        <h3>Que recomendamos llevar:</h3>
+        <p>
+            Ropa Comoda, documentos, dinero, Anteojos de sol, protector solar, gorra o sombrero, ropa de abrigo,
+            binoculares, cámara de fotos.</p>
+        <h3>Politica de la empresa y cancelaciones</h3>
+        <p><b>Transporte:</b> El tipo de vehículo asignado quedara pura y exclusivamente a criterio de La Empresa.</p>
+        <p><b>Equipaje:</b> El equipaje y demás objetos corren por cuenta y riesgo de los pasajeros.</p>
+
+        <p><b>Documentación:</b> La presentación de documentación para la realización del viaje contratado, queda a
+            cargo de los pasajeros.</p>
+
+        <p><b>Derecho de permanencia:</b> La Empresa se reserva el derecho de permanencia de pasajeros que por mala
+            conducta, higiene, salud u otro motivo constituyan incomodidad para los demás integrantes del viaje.</p>
+
+
+        <p><b>Cancelaciones:</b> Para las cancelaciones realizadas faltando 3 días para el inicio del viaje, se
+            descontara el 30% de total, para cancelaciones realizadas faltando 2 días, se descontara el 50% del total y
+            para cancelaciones dentro de las 24 horas, La Empresa no efectuara devolución alguna.</p>
+
+        <p><b>Pagos:</b> La reserva quedara confirmada una vez hecho el pago del 50% del servicio contratado, debiendo
+            el pasajero completar el saldo restante (50%) en el momento de iniciar el viaje.</p>
+
+
+    </div>
     <footer>
         <div>
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
             <a href="https://pinterest.com/" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
-            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin" ></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <p>Derechos reservados @2024</p>
-   </footer>
+    </footer>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
