--- a/acerca.htm
+++ b/acerca.htm
@@ -8,7 +8,7 @@
     <link href="./css/style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="grid-container">
     <header class="navbar-area">
         <div class="navbar">
             <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png"></a>
