--- a/index.html
+++ b/index.html
@@ -52,48 +52,27 @@
         <div class="item item-1">
             <div class="imaxge-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
             <h2>Tolar grande</h2>
-            <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños pueblos
-                puneños llenos de maravillas naturales para descubrir en cada kilometro. Una aventura fotográfica por
-                paisajes impactantes, ricos en imágenes y contrastes. Vicuñas, zorros y aves exoticas seran nuestros
-                objetivos a fotografiar. La Puna esta cubierta de Salares y monumentos tallados en roca volcánica en el
-                Corazón de la Puna Argentina.
-                Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados,
-                Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
+            <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños pueblos puneños llenos de maravillas naturales para descubrir en cada kilometro. Una aventura fotográfica por paisajes impactantes, ricos en imágenes y contrastes. Vicuñas, zorros y aves exoticas seran nuestros objetivos a fotografiar. La Puna esta cubierta de Salares y monumentos tallados en roca volcánica en el Corazón de la Puna Argentina.
+Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados, Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
             </p>
             <p class="right">Conocé más +</p>
         </div>
         <div class="item item-2">
             <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg"></div>
             <h2>Serranía de Hornocal</h2>
-            <p>La serranía de Hornocal es una sierra ubicada a 25 kilómetros de la ciudad de Humahuaca en la provincia
-                de Jujuy en la Argentina. Está formada mayormente por rocas de la Formación Yacoraite, una unidad
-                geológica calcárea de antigüedad Cretácico Superior, que se extiende desde la provincia de Salta,
-                atravesando la Quebrada de Humahuaca y luego el altiplano boliviano hasta Perú.1​ Este accidente
-                geográfico tiene una altura de 4761 metros sobre el nivel del mar.
-
-                Su forma característica es resultado de un efecto de corte, que consiste en la erosión en ángulo de un
-                conjunto de capas paralelas que produce un efecto visual similar al de plegamientos (erróneamente
-                asociado a esta serranía con frecuencia).2​</p>
+            <p>La serranía de Hornocal es una sierra ubicada a 25 kilómetros de la ciudad de Humahuaca en la provincia de Jujuy en la Argentina. Está formada mayormente por rocas de la Formación Yacoraite, una unidad geológica calcárea de antigüedad Cretácico Superior, que se extiende desde la provincia de Salta, atravesando la Quebrada de Humahuaca y luego el altiplano boliviano hasta Perú. Este accidente geográfico tiene una altura de 4761 metros sobre el nivel del mar. Es ideal para un paseo fotográfico inolvidable, ideal para los amantes de amplios paisajes y el recorrido incluye vistas colores impactantes.</p>
             <p class="right">Conocé más +</p>
         </div>
         <div class="item item-3">
             <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg"></div>
             <h2>Cachi</h2>
-            <p>El municipio de Cachi está ubicado al oeste de la provincia de Salta, en la región de los Valles
-                Calchaquíes, y pertenece al departamento de Cachi. Limita al norte con el municipio de Payogasta y al
-                sur con el municipio de Seclantás. El Pueblo de Cachi está situado a 2.280 msnm y se arriba por la Ruta
-                Nacional 40. Está ubicado a 150.6 km de la Ciudad de Salta. El Municipio está conformado por los parajes
-                de Quipón, El Angosto, Rancagua, Escalchi, La Paya, San José, El Barrial, El Colte, Fuerte Alto Banda
-                Norte y Banda Sur, Cachi Adentro, San Miguel, Las Arcas, Las Pailas, La Aguada, Las Trancas y El
-                Algarrobal.</p>
+            <p>El municipio de Cachi está ubicado al oeste de la provincia de Salta, en la región de los Valles Calchaquíes, y pertenece al departamento de Cachi. El Pueblo de Cachi está situado a 2.280 msnm y se arriba por la Ruta Nacional 40. Un recorrido imperdible por sus calles y Miradores. Arquitectura tradicional y las mejores vistas para fotografíar.</p>
             <p class="right">Conocé más +</p>
         </div>
         <div class="item item-4">
             <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div>
             <h2>Cafayate</h2>
-            <p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta,
-                región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad de
-                los vinos que allí se producen.</p>
+            <p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta, región noroeste de Argentina.  Se funden en un solo paisaje cardones en la tierra, loros y catas en el cielo, yuscas, sábalos y bagres en el agua. Cafayate y sus ambientes te ofrecen sus maravillas naturales. Posee una rica fauna adaptada a las condiciones áridas del lugar. En la parte más alejada de zona urbana se pueden observar pumas, guanacos, tarucas, zorros grises y colorados, cuises, liebres, comadrejas, entre otos.</p>
             <p class="right">Conocé más +</p>
         </div>
 
