--- a/contacto.html
+++ b/contacto.html
@@ -47,7 +47,7 @@
         <h3 class="titleContactenos">Contactenos</h3>
         <section class="container">
             <h4 class="subTitleContactenos">Tus datos:</h4>
-            <form class="container-fluid" onsubmit="return validacionFormulario()">
+            <form class="container-fluid" id="Form" onsubmit="return validacionFormulario()">
                 <div class="row fila">
                     <label for="Nombre" class="col-6">Nombre: *</label>
                     <input type="text" name="Nombre" id="nombreID" class="col-6 textinp">
