--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <p class="center">Salta fotográfico</p>
     </div>
     <div class="intro">
-        <p class="noindent">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y conocé todas las
+        <p class="noindent b1">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y conocé todas las
             experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el viaje.</p>
     </div>
-
+<div class="marco center b1"> <h3 class="tituloSectionViajes">NUESTROS VIAJES FOTOGRAFICOS</h3></div>
     <div class="container-index">
-        <h3 class="tituloSectionViajes">NUESTROS VIAJES FOTOGRAFICOS</h3>
+       
         <div class="item item-1">
-            <div class="imaxge-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
+            <div class="image-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
             <h2>Tolar grande</h2>
             <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños pueblos
                 puneños llenos de maravillas naturales para descubrir en cada kilometro. Una aventura fotográfica por
@@ -60,7 +60,7 @@
                 Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados,
                 Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
             </p>
-            <p class="right">Conocé más +</p>
+            <p class="right b1">Conocé más +</p>
         </div>
         <div class="item item-2">
             <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg"></div>
@@ -74,7 +74,7 @@
                 Su forma característica es resultado de un efecto de corte, que consiste en la erosión en ángulo de un
                 conjunto de capas paralelas que produce un efecto visual similar al de plegamientos (erróneamente
                 asociado a esta serranía con frecuencia).2​</p>
-            <p class="right">Conocé más +</p>
+            <p class="right b1">Conocé más +</p>
         </div>
         <div class="item item-3">
             <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg"></div>
@@ -86,7 +86,7 @@
                 de Quipón, El Angosto, Rancagua, Escalchi, La Paya, San José, El Barrial, El Colte, Fuerte Alto Banda
                 Norte y Banda Sur, Cachi Adentro, San Miguel, Las Arcas, Las Pailas, La Aguada, Las Trancas y El
                 Algarrobal.</p>
-            <p class="right">Conocé más +</p>
+            <p class="right b1">Conocé más +</p>
         </div>
         <div class="item item-4">
             <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div>
@@ -94,37 +94,57 @@
             <p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta,
                 región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad de
                 los vinos que allí se producen.</p>
-            <p class="right">Conocé más +</p>
+            <p class="right b1">Conocé más +</p>
         </div>
 
 
+        <div class="item item-5">
+            <div class="image-interior"><img src="imgs/index/sitios/baritu.jpg"></div>
+            <h2>Parque Nacional Baritú</h2>
+            <p>El parque está naturalmente cerrado por cuatro cadenas montañosas, al norte se ubica la Sierra del Porongal, al este la serranía de Las Pavas, al sur el Cerro Negro y las sierras del Río Pescado, y al oeste las serranías de los Cinco Picachos.
+
+                En esta zona crecen sin riesgos árboles que alcanzaron gran talla como cebiles, nogales, cedros, quinas, afatas, palos amarillos y tipas blancas que alternan con arrayanes, guayabos, matos y helechos arborescentes, que resultan impresionantes a la vista. </p>
+            <p class="right b1">Conocé más +</p>
+        </div>
+
+        <div class="item item-6">
+            <div class="image-interior"><img src="imgs/index/sitios/valle.png"></div>
+            <h2>Valle encantado</h2>
+            <p>Presenta un paisaje extraordinario que une formas y colores naturales de sorprendentes contrastes, donde la erosión eólica y la lluvia han esculpido en años insólitas y sugestivas bellezas.</p>
+            <p>Es una increíble vía natural habitada por comunidades rurales laboriosas que mantienen sus tradiciones y creencias ancestrales. La quebrada conecta la zona con el Valle Calchaquí a través de la Ruta Provincial N°33. Un paraíso verde y zigzagueante que sorprende a cada paso en el recorrido.</p>
+            <p class="right b1">Conocé más +</p>
+        </div>
 
     </div>
 
-    <div class="formulario">
-
-        <p>Escribinos para conocer detalles y recibir información sobre las futuras salidas.
-        <p class="center"><b>Eliminar el estilo formulario que está abajo de todo en el css, es sólo para destacar esta
-                sección</b></p>
+    <div class="container-index2">
+        <div class="marco center b1"> <h3 class="tituloSectionViajes">NOS RECOMIENDAN</h3></div>
+    <div class="opiniones">
+        <div class="item2 item-1"><p>Ana Luiza Guigues<br/> Foi ótima, super recomendo!! O caminho até lá é lindo e a cidade é muito charmosa. O guia Raul e os motoristas foram super atenciosos e solicitos. Recomendo muito o passeio!</p></div>
+        <div class="item2 item-2"><p>Andrea Navarrete<br/> Hola excelente excursion Angie una genia con sus explicaciones y consejos...Javier el conductor un crak al volante, la gente que compartió la excursión de 10. Aparte el paisaje y Cachi maravilloso</p></div>
+        <div class="item2 item-3"><p>Lorena Oholeguy<br/> Muy linda experiencia, excelente el guía Oscar los conductores muy buenos se preocupan todo el tiempo por todos nosotros los lugares buenísimo, muy conformes con todos, muy buenos los paseos .muchas gracias</p></div>
+        <div class="item2 item-4"><p>Jorge Huerta Gonzalez<br/>
+            Lugar mágico, lleno de historia y rodeado de bellezas naturales increibles. La excursión fue muy buena, se conocen lugares únicos por su belleza, se come muy rico en Cachi, se ve fauna muy como las llamas y los cóndores. Mi única recomendación es dar más tiempo en Cachi. Se queda uno con ganas de pasar más tiempo.</p></div>
     </div>
 
+</div>
 
-    <div class="info">
-        <h3>Que incluye el tour:</h3>
+    <div class="marco">
+        <p class="b1"><b>Que incluye el tour:</b></p>
         <p>Guia/Fotógrafo, Transporte, Alojamiento en Refugio AFAPUNA (consultar por hotel boutique) de altura,
             chofer/guía en castellano o ingles (segun se solicite) en toda la excursión.</p>
 
-        <h3>Que no incluye:</h3>
+            <p class="b1"><b>Que no incluye:</b></p>
         <p>
             Equipo de fotografía, Desayuno, Almuerzo, entradas a museos o similares, degustaciones pagas, propinas y
-            extras no especificados.
-        <p>
-        <h3>Que recomendamos llevar:</h3>
+            extras no especificados.</p>
+        
+            <p class="b1"><b>Que recomendamos llevar:</b></p>
         <p>
             Ropa Comoda, documentos, dinero, Anteojos de sol, protector solar, gorra o sombrero, ropa de abrigo,
             binoculares, cámara de fotos.</p>
-        <h3>Politica de la empresa y cancelaciones</h3>
-        <p><b>Transporte:</b> El tipo de vehículo asignado quedara pura y exclusivamente a criterio de La Empresa.</p>
+            <p class="b1"><b>Politica de la empresa y cancelaciones</b></p>
+        <p class="b1"><b>Transporte:</b> El tipo de vehículo asignado quedara pura y exclusivamente a criterio de La Empresa.</p>
         <p><b>Equipaje:</b> El equipaje y demás objetos corren por cuenta y riesgo de los pasajeros.</p>
 
         <p><b>Documentación:</b> La presentación de documentación para la realización del viaje contratado, queda a
