--- a/acerca.htm
+++ b/acerca.htm
@@ -5,37 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La cocina de Sergio</title>
     <link rel="icon" href=".\imgs\logo.jpg" type="image/x-icon">
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/prueba.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
 </head>
 <body class="grid-container">
-    <header class="navbar-area">
-        <div class="navbar">
-            <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png"></a>
-            <nav class="nav-pc">
-                <a href="index.html" class="item-nav">Inicio</a>
-                <a href="acerca.htm" class="item-nav">Acerca</a>
-                <a href="contacto.html" class="item-nav">Contacto</a>
-                <a href="sucursales.html" class="item-nav">Sucursales</a>
-            </nav>
-            <nav class="nav-movile">
-                <i class="fa-solid fa-bars icon-menu" id="icon-menu"></i>
-            </nav>
 
+    <div class="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item"><img src="imgs/index/sitios/baritu.jpg" alt="Imagen 1"></div>
+          <div class="carousel-item"><img src="imgs/index/sitios/Cachi1.jpg" alt="Imagen 2"></div>
+          <div class="carousel-item"><img src="imgs/index/sitios/Cachi2.webp" alt="Imagen 3"></div>
+          <div class="carousel-item"><img src="imgs/index/sitios/Cafayate1.jpg" alt="Imagen 4"></div>
         </div>
-
-    </header>
-    <div class="nav-movile-popup">
-        <div class="nav-movile-izq">
-            <a href="index.html" class="item-nav-movile">Inicio</a>
-            <a href="acerca.htm" class="item-nav-movile">Acerca</a>
-            <a href="contacto.html" class="item-nav-movile">Contacto</a>
-            <a href="sucursales.html" class="item-nav-movile">Sucursales</a>
-        </div>
-        <div class="nav-movile-der">
-            <i class="fa-solid fa-x" id="faxx2"></i>
-        </div>
-    </div>
+        <button class="prev" onclick="prevSlide()">&#10094;</button>
+        <button class="next" onclick="nextSlide()">&#10095;</button>
+      </div>
   <footer >
         <div>
         <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -46,6 +30,6 @@
         </div>
         <p>Derechos reservados @2024</p>
    </footer>
-   <script src="js/app.js"></script>
+   <script src="js/prueba.js"></script>
 </body>
 </html>
