--- a/index.html
+++ b/index.html
@@ -134,30 +134,12 @@
         <div class="marco center b1">
             <h3 class="tituloSectionViajes">NOS RECOMIENDAN</h3>
         </div>
-        <div class="opiniones">
-            <div class="item2 item-1">
-                <p>Ana Luiza Guigues<br /> Foi ótima, super recomendo!! O caminho até lá é lindo e a cidade é muito
-                    charmosa. O guia Raul e os motoristas foram super atenciosos e solicitos. Recomendo muito o passeio!
-                </p>
-            </div>
-            <div class="item2 item-2">
-                <p>Andrea Navarrete<br /> Hola excelente excursion Angie una genia con sus explicaciones y
-                    consejos...Javier el conductor un crak al volante, la gente que compartió la excursión de 10. Aparte
-                    el paisaje y Cachi maravilloso</p>
-            </div>
-            <div class="item2 item-3">
-                <p>Lorena Oholeguy<br /> Muy linda experiencia, excelente el guía Oscar los conductores muy buenos se
-                    preocupan todo el tiempo por todos nosotros los lugares buenísimo, muy conformes con todos, muy
-                    buenos los paseos .muchas gracias</p>
-            </div>
-            <div class="item2 item-4">
-                <p>Jorge Huerta Gonzalez<br />
-                    Lugar mágico, lleno de historia y rodeado de bellezas naturales increibles. La excursión fue muy
-                    buena, se conocen lugares únicos por su belleza, se come muy rico en Cachi, se ve fauna muy como las
-                    llamas y los cóndores. Mi única recomendación es dar más tiempo en Cachi. Se queda uno con ganas de
-                    pasar más tiempo.</p>
-            </div>
-        </div>
+            <div class="container-index2">
+        <div class="item2 item-1"><p class="viaje">Cafayate</p><p class="nombre"><b>Ana Luiza Guigues</b></p><p class="resena"> Foi ótima, super recomendo!! O caminho até lá é lindo e a cidade é muito charmosa. O guia Raul e os motoristas foram super atenciosos e solicitos. Recomendo muito o passeio!</p><p class="mira">Mirá sus fotos en: <br/><span class="naranja">@Ani_paisajes</span></p></div>
+        <div class="item2 item-2"><p class="viaje">Cachi</p><p class="nombre"><b>Andrea Navarrete</b></p><p class="resena"> Hola excelente excursion Angie una genia con sus explicaciones y consejos...Javier el conductor un crak al volante, la gente que compartió la excursión de 10. Aparte el paisaje y Cachi maravilloso</p><p class="mira">Mirá sus fotos en: <br/><span class="naranja">@AndreFotos</span></p></div>
+        <div class="item2 item-3"><p class="viaje">Cafayate</p><p class="nombre"><b>Lorena Oholeguy</b></p><p class="resena"> Muy linda experiencia, excelente el guía Oscar los conductores muy buenos se preocupan todo el tiempo por todos nosotros los lugares buenísimo, muy conformes con todos, muy buenos los paseos .muchas gracias</p><p class="mira">Mirá sus fotos en: <br/><span class="naranja">@LoreOle</span></p></div>
+        <div class="item2 item-4"><p class="viaje">Tolar grande</p><p class="nombre"><b>Jorge Huerta Gonzalez</b></p><p class="resena"> Lugar mágico, lleno de historia y rodeado de bellezas naturales increibles. La excursión fue muy buena, se conocen lugares únicos por su belleza, se come muy rico en Cachi, se ve fauna muy como las llamas y los cóndores. Mi única recomendación es dar más tiempo en Cachi. Se queda uno con ganas de pasar más tiempo.</p><p class="mira">Mirá sus fotos en: <br/><span class="naranja">@JorgeHuertas</span></p></div>
+     </div>  
 
     </div>
 
